; ModuleID = '/home/carl/AnghaBench/8cc/extr_parse.c_read_static_local_var.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_parse.c_read_static_local_var.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@localenv = common dso_local global i32* null, align 8
@toplevels = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @read_static_local_var to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @read_static_local_var(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = call i32* @ast_static_lvar(i32* %8, i8* %9)
  store i32* %10, i32** %5, align 8
  store i32* null, i32** %6, align 8
  %11 = call i64 @next_token(i8 signext 61)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %18

13:                                               ; preds = %2
  %14 = load i32*, i32** @localenv, align 8
  store i32* %14, i32** %7, align 8
  store i32* null, i32** @localenv, align 8
  %15 = load i32*, i32** %3, align 8
  %16 = call i32* @read_decl_init(i32* %15)
  store i32* %16, i32** %6, align 8
  %17 = load i32*, i32** %7, align 8
  store i32* %17, i32** @localenv, align 8
  br label %18

18:                                               ; preds = %13, %2
  %19 = load i32, i32* @toplevels, align 4
  %20 = load i32*, i32** %5, align 8
  %21 = load i32*, i32** %6, align 8
  %22 = call i32 @ast_decl(i32* %20, i32* %21)
  %23 = call i32 @vec_push(i32 %19, i32 %22)
  ret void
}

declare dso_local i32* @ast_static_lvar(i32*, i8*) #1

declare dso_local i64 @next_token(i8 signext) #1

declare dso_local i32* @read_decl_init(i32*) #1

declare dso_local i32 @vec_push(i32, i32) #1

declare dso_local i32 @ast_decl(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
